feat: add lesson prgress tracking (#4)
* feat: add lesson prgress tracking

* feat: remove unused code

---------
